--- a/Brouillons/Romain/Modele_sample.ipynb
+++ b/Brouillons/Romain/Modele_sample.ipynb
@@ -377,35 +377,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.3431,  1.1478, -0.3646,  0.9585,  1.2924,  1.7197,  1.7613, -0.4461,\n",
-       "          0.1445, -1.4674],\n",
-       "        [ 0.1458,  0.0233,  0.5180, -1.9255,  0.5275,  0.6784, -1.3668,  1.1555,\n",
-       "          1.4334, -1.1032],\n",
-       "        [-1.2393,  1.1643,  1.1756,  0.1937, -0.8903, -0.4984, -0.0095, -1.3632,\n",
-       "          1.6272,  0.1972],\n",
-       "        [ 1.3565,  0.7157,  0.9915, -0.1102, -0.4371, -0.7880,  0.3525, -0.4517,\n",
-       "          0.5484, -0.7496],\n",
-       "        [ 1.1653, -0.2500,  1.4164,  1.5448,  1.7698, -1.3863, -0.8301, -0.3855,\n",
-       "          0.3140, -1.2120],\n",
-       "        [-0.7621,  0.5651,  1.0514, -0.4918,  1.3155, -1.9175, -0.3335, -1.6094,\n",
-       "          0.3318, -1.0806],\n",
-       "        [ 0.6262,  0.4406,  1.9083,  0.1963,  0.8050,  0.2576, -1.3520,  0.6384,\n",
-       "         -0.7337,  1.0205],\n",
-       "        [-0.1517, -0.1985,  0.1403, -1.0160, -0.2920, -1.9189, -0.7851, -2.0339,\n",
-       "          2.3004, -0.4903],\n",
-       "        [-0.5881, -0.7291,  0.9962,  0.6894, -0.6274,  0.4354,  0.0166, -1.6822,\n",
-       "          0.3377,  0.2643],\n",
-       "        [ 0.2961, -0.5734, -0.2786, -0.6650, -2.0198,  1.5315,  0.4407,  0.0998,\n",
-       "          0.6324, -0.1451]], grad_fn=<SliceBackward>)"
+       "tensor([[ 0.5412,  0.0038,  0.0387, -1.5949,  1.5272,  0.8823, -0.6790, -0.7588,\n",
+       "         -0.0372, -0.8157],\n",
+       "        [-0.5245,  0.3148, -0.4191, -1.4192, -0.3776,  0.5609,  0.1891, -0.2417,\n",
+       "          1.6929,  0.3959],\n",
+       "        [-0.1487, -1.3347,  0.3655, -0.3361, -1.6402,  0.5023, -1.7574,  0.4513,\n",
+       "          0.3055, -0.7681],\n",
+       "        [ 1.2889,  1.3248, -0.2384, -1.1272, -0.1775, -0.7825,  0.1188,  0.1040,\n",
+       "          0.0136, -1.5974],\n",
+       "        [-0.5304,  0.8723, -0.0518,  1.1733, -0.7015,  0.6484, -1.2254, -0.1206,\n",
+       "          0.1947, -0.1241],\n",
+       "        [-0.4542,  0.3151,  0.2092,  0.1911, -0.1548, -1.5418,  0.7176, -0.2667,\n",
+       "          0.5463, -1.1887],\n",
+       "        [-0.6697, -0.0636,  0.9601,  0.3905, -0.6237, -0.7213, -0.0601, -0.5279,\n",
+       "          0.8414, -0.1267],\n",
+       "        [ 0.5183,  0.6076,  0.9916, -0.4725, -0.5053,  1.1060, -0.4358,  1.3260,\n",
+       "         -1.2716,  0.5337],\n",
+       "        [ 1.0686, -1.2510,  0.1488, -0.5754,  0.9399, -1.9468,  0.9206,  1.1858,\n",
+       "          1.0060, -1.0008],\n",
+       "        [-1.1071,  0.1962, -0.3748,  0.3867, -0.1931,  0.8531,  0.6101, -0.8743,\n",
+       "         -0.6412, -1.4110]], grad_fn=<SliceBackward>)"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,25 +459,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('rathalos', 0.7310312707276541),\n",
-       " ('y', 0.7117773667606464),\n",
-       " ('mtue', 0.6972553839008429),\n",
-       " ('réveille', 0.6645014134124577),\n",
-       " ('madre', 0.6638478961311802),\n",
-       " ('😭', 0.6551260058122947),\n",
-       " ('dodo', 0.6544916175622695),\n",
-       " ('pense', 0.6393783723895966),\n",
-       " ('glisse', 0.6249456152564727),\n",
-       " ('✅', 0.6135785278345168)]"
+       "[('pioche', 0.7683040038002439),\n",
+       " ('seconde', 0.7341993959590819),\n",
+       " ('jsuis', 0.676605263948548),\n",
+       " ('»', 0.6594659518233653),\n",
+       " ('que', 0.654054055958198),\n",
+       " ('best', 0.6465407881263392),\n",
+       " ('quand', 0.6366425112567645),\n",
+       " ('applis', 0.6221293993377353),\n",
+       " ('bien', 0.6157058808791527),\n",
+       " ('pu', 0.6060293637744669)]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
