--- a/Brouillons/Alain/Test Alain.ipynb
+++ b/Brouillons/Alain/Test Alain.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -128,10 +128,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a22140e50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a23a37b90>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -176,7 +176,7 @@
      "output_type": "stream",
      "text": [
       "[['il', 'mérite', 'd', 'être', 'bloquer', 'la', 'lettre', 'de', 'l', 'alphabet'], ['nickname', 'et', 'fière', 'je', 't', 'en', 'voi', 'att', 'j', 'avais', 'oublié'], ['il', 'est', '1', 'heure'], ['eeeeh', 'jfais', 'la', 'go', 'qui', 'a', 'de', 'les', 'programmes', 'mais', 'j', 'ai', 'même', 'pas', 'de', 'navigo', 'ptdddddr', '😭'], ['en', 'tout', 'cas', 'la', 'demoiselle', 'a', 'bien', 'raison'], ['le', 'rathalos', 'est', 'un', 'gros', 'fils', 'de', 'pute', 'bonne', 'nuit'], ['nickname', 'et', 'puis', 'un', 'jour', 'pfffffffffus', 'rien', 'ne', 'fonctionne', 'l', 'humain', 'se', 'meurt', 'à', 'petit', 'feu'], ['nickname', 'je', 'veux', 'pas', 'en', 'savoir', 'sasuke', 'j', 'sais', 'pas', 'qui', 'c', 'est', 'mais', 'j', 'crois', 'il', 'est', 'sombre'], ['à', 'partir', 'de', 'quand', 'peut', 'on', 'se', 'qualifier', 'de', 'fan'], ['go', 'profité', 'de', 'les', '6h20', 'de', 'sommeil', 'qu', 'il', 'me', 'reste']]\n",
-      "[['il', 'mérite', 'd', 'être', 'bloquer', 'la', 'lettre', 'l', 'alphabet'], ['et', 'fière', 'je', 't', 'en', 'voi', 'att', 'j', 'avais', 'oublié'], ['il', 'est', '1', 'heure'], ['eeeeh', 'jfais', 'la', 'go', 'qui', 'a', 'de', 'les', 'programmes', 'mais', 'j', 'ai', 'même', 'pas', 'de', 'navigo', 'ptdddddr', '😭'], ['en', 'tout', 'cas', 'la', 'demoiselle', 'a', 'bien', 'raison'], ['le', 'rathalos', 'est', 'un', 'gros', 'fils', 'de', 'pute', 'bonne', 'nuit'], ['nickname', 'et', 'puis', 'un', 'jour', 'pfffffffffus', 'rien', 'ne', 'fonctionne', 'l', 'humain', 'se', 'meurt', 'à', 'petit', 'feu'], ['nickname', 'je', 'veux', 'pas', 'en', 'savoir', 'sasuke', 'j', 'sais', 'pas', 'qui', 'c', 'est', 'mais', 'j', 'crois', 'il', 'est', 'sombre'], ['à', 'partir', 'de', 'quand', 'peut', 'on', 'se', 'qualifier', 'fan'], ['go', 'profité', 'les', '6h20', 'de', 'sommeil', 'qu', 'il', 'me', 'reste']]\n"
+      "[['il', 'mérite', 'd', 'être', 'bloquer', 'la', 'lettre', 'l', 'alphabet'], ['nickname', 'et', 'fière', 'je', 't', 'en', 'voi', 'att', 'j', 'avais', 'oublié'], ['il', 'est', '1', 'heure'], ['eeeeh', 'jfais', 'la', 'go', 'qui', 'a', 'de', 'les', 'programmes', 'mais', 'j', 'ai', 'même', 'pas', 'de', 'navigo', 'ptdddddr', '😭'], ['en', 'tout', 'cas', 'la', 'demoiselle', 'a', 'bien', 'raison'], ['le', 'rathalos', 'est', 'un', 'gros', 'fils', 'de', 'pute', 'bonne', 'nuit'], ['nickname', 'et', 'puis', 'un', 'jour', 'pfffffffffus', 'rien', 'ne', 'fonctionne', 'l', 'humain', 'se', 'meurt', 'à', 'petit', 'feu'], ['nickname', 'je', 'veux', 'pas', 'en', 'savoir', 'sasuke', 'j', 'sais', 'pas', 'qui', 'c', 'est', 'mais', 'j', 'crois', 'il', 'est', 'sombre'], ['à', 'partir', 'de', 'quand', 'peut', 'on', 'se', 'qualifier', 'de', 'fan'], ['go', 'profité', 'de', 'les', '6h20', 'de', 'sommeil', 'qu', 'il', 'me', 'reste']]\n"
      ]
     }
    ],
@@ -220,25 +220,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[19287, 12390],\n",
-       " [19287, 9728],\n",
-       " [12390, 19287],\n",
-       " [12390, 9728],\n",
-       " [12390, 13729],\n",
-       " [9728, 19287],\n",
-       " [9728, 12390],\n",
-       " [9728, 13729],\n",
-       " [9728, 2943],\n",
-       " [13729, 12390]]"
+       "[[6628, 7146],\n",
+       " [6628, 89],\n",
+       " [7146, 6628],\n",
+       " [7146, 89],\n",
+       " [7146, 10667],\n",
+       " [89, 6628],\n",
+       " [89, 7146],\n",
+       " [89, 10667],\n",
+       " [89, 7088],\n",
+       " [10667, 7146]]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,8 @@
    "source": [
     "#words = [item for sublist in phrases2 for item in sublist]\n",
     "#vocabulary = list(vocabulary)\n",
-    "\n",
+    "words = [item for sublist in phrases for item in sublist]\n",
+    "vocabulary = list(set(words))\n",
     "def create_sample(phrases, vocabulary, window = 2):\n",
     "    test_sample = []\n",
     "    for phrase in phrases:\n",
@@ -287,27 +288,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
+   "execution_count": 67,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([13546, 300])\n",
-      "torch.Size([13546, 300])\n",
-      "tensor([ 30.3599, -47.3308, -15.7066,  ...,   0.4665,  43.9954,  15.2419])\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'module' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-137-e54a700585e9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0mproba\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msoftmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0mlog_probs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog_softmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m \u001b[0;31m#loss = F.nll_loss(log_probs.view(1,-1), autograd.Variable(torch(target).long()))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;31m#loss.backward()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'module' object is not callable"
+      "378040\n",
+      "tensor([[-2.1177,  2.0139, -0.0242,  ..., -0.1263,  1.0189,  0.8246],\n",
+      "        [ 0.3655, -0.5977, -1.0775,  ...,  0.2171,  0.8997,  1.0988],\n",
+      "        [ 1.3388,  0.9182, -0.9792,  ..., -1.1301,  1.3100, -0.1081],\n",
+      "        ...,\n",
+      "        [-0.8088, -0.2768, -0.9781,  ..., -0.4508,  0.2700, -2.1237],\n",
+      "        [ 0.7474,  2.7829, -0.9581,  ..., -0.6509, -0.7352,  1.9616],\n",
+      "        [-2.1480,  2.1512, -0.9592,  ...,  0.7788,  1.3149, -0.0862]],\n",
+      "       requires_grad=True)\n",
+      "0\n",
+      "9000\n",
+      "18000\n",
+      "27000\n",
+      "36000\n",
+      "45000\n",
+      "54000\n",
+      "63000\n",
+      "72000\n",
+      "81000\n",
+      "90000\n",
+      "99000\n",
+      "108000\n",
+      "117000\n",
+      "126000\n",
+      "135000\n",
+      "144000\n",
+      "153000\n",
+      "162000\n",
+      "171000\n",
+      "180000\n",
+      "189000\n",
+      "198000\n",
+      "207000\n",
+      "216000\n",
+      "225000\n",
+      "234000\n",
+      "243000\n",
+      "252000\n",
+      "261000\n",
+      "270000\n",
+      "279000\n",
+      "288000\n",
+      "297000\n",
+      "306000\n",
+      "315000\n",
+      "324000\n",
+      "333000\n",
+      "342000\n",
+      "351000\n",
+      "360000\n",
+      "369000\n",
+      "378000\n",
+      "tensor([[-2.1059,  2.0018, -0.0270,  ..., -0.1302,  1.0130,  0.8154],\n",
+      "        [ 0.3477, -0.5829, -1.0598,  ...,  0.1979,  0.8742,  1.0774],\n",
+      "        [ 1.3366,  0.9176, -0.9765,  ..., -1.1304,  1.3078, -0.1082],\n",
+      "        ...,\n",
+      "        [-0.7989, -0.2667, -0.9719,  ..., -0.4520,  0.2564, -2.1106],\n",
+      "        [ 0.7449,  2.7770, -0.9527,  ..., -0.6497, -0.7304,  1.9542],\n",
+      "        [-2.1268,  2.1382, -0.9563,  ...,  0.7758,  1.2962, -0.0885]],\n",
+      "       requires_grad=True)\n"
      ]
     }
    ],
@@ -319,49 +368,51 @@
     "import torch.autograd as autograd\n",
     "\n",
     "\n",
-    "dim = 300\n",
+    "dim = 10\n",
+    "epoch = 1\n",
     "learning_rate = 0.001\n",
     "#test_sample = create_sample(phrases, vocabulary)\n",
     "\n",
     "# Attention: torch.rand génère une loi uniforme et torch.randn une loi normale\n",
-    "input = torch.randn(len(vocabulary), dim, requires_grad=True, dtype=torch.float)\n",
-    "output = torch.randn(len(vocabulary), dim, requires_grad=True, dtype=torch.float)\n",
-    "input = autograd.Variable(input)\n",
-    "output = autograd.variable(output)\n",
-    "print(input.size())\n",
-    "#print(F.softmax(input, dim=0))\n",
-    "#print(input[:, 1]) extraire la ligne i\n",
-    "#print(input[1, :])\n",
+    "input = torch.randn(len(vocabulary), dim, requires_grad=True).float()\n",
+    "output = torch.randn(len(vocabulary), dim, requires_grad=True).float()\n",
+    "input = autograd.Variable(input, requires_grad=True)\n",
+    "output = autograd.variable(output, requires_grad=True)\n",
+    "print(len(test_sample))\n",
     "\n",
-    "epoch = 10\n",
-    "context = 9728\n",
-    "target = 2943\n",
-    "print(output.size())\n",
-    "\n",
-    "# Multiplication matricielle: \n",
-    "data = torch.matmul(input[context,], torch.t(output))\n",
-    "print(data)\n",
-    "proba = F.softmax(data, dim=0)\n",
-    "log_probs = F.log_softmax(data, dim=0)\n",
-    "print((torch(target)))\n",
-    "#loss = F.nll_loss(log_probs.view(1,-1), autograd.Variable(torch(target).long()))\n",
-    "#loss.backward()\n",
-    "#print(autograd.Variable(torch.from_numpy(np.array([target])).long()))\n",
-    "#loss = F.nll_loss(log_softmax, )\n",
-    "#loss = F.nll_loss(log_probs, autograd.Variable(target))\n",
-    "#loss.backward()\n",
-    "#input.backward(torch.tensor(log_softmax))\n",
-    "print(log_probs.size())\n",
-    "print(log_probs.view(1, -1).size())\n",
-    "print(output[target,].size())\n",
     "#nn.MSELoss(log_probs.view(1, -1), autograd.Variable(output[target,]))\n",
     "\n",
     "#input = input - learning_rate * input.grad\n",
     "#output = output - learning_rate * input.grad\n",
     "#for context, target in test_sample:\n",
-    "\n",
-    "#for i in range(epoch):\n",
-    "    "
+    "print(input)        \n",
+    "for i in range(epoch):\n",
+    "    loss_tot = 0\n",
+    "    compteur = 0\n",
+    "    print(i)\n",
+    "    for context, target in test_sample:\n",
+    "        compteur+=1\n",
+    "        if(compteur % 9000 == 0):\n",
+    "            print(compteur)\n",
+    "        \n",
+    "        # Multiplication matricielle: \n",
+    "        data = torch.matmul(input[context,], torch.t(output))\n",
+    "        proba = F.softmax(data, dim=0)\n",
+    "        log_probs = F.log_softmax(data, dim=0)\n",
+    "        loss = F.nll_loss(log_probs.view(1,-1), torch.tensor([target]).long())\n",
+    "        #print(loss)\n",
+    "        #loss_tot += loss.data\n",
+    "        # Pour ensuite dériver les matrices par rapport à la loss\n",
+    "        loss.backward()\n",
+    "        \n",
+    "        # Il faut modifier juste le .data pour ne pas perdre la structure\n",
+    "        input.data = input.data - learning_rate * input.grad.data\n",
+    "        output.data = output.data - learning_rate * output.grad.data\n",
+    "        \n",
+    "        input.grad.data.zero_()\n",
+    "        output.grad.data.zero_()\n",
+    "print(input)        \n",
+    " "
    ]
   },
   {
@@ -390,22 +441,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([2943])"
+       "0"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "autograd.Variable(torch.from_numpy(np.array([target])).long())"
+    "10 % 10"
    ]
   },
   {
