--- a/Brouillons/Alain/Test Alain.ipynb
+++ b/Brouillons/Alain/Test Alain.ipynb
@@ -752,22 +752,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "tensor(-2.9552, grad_fn=<DotBackward>)"
+      "text/html": [
+       "        <script type=\"text/javascript\">\n",
+       "        window.PlotlyConfig = {MathJaxConfig: 'local'};\n",
+       "        if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}\n",
+       "        if (typeof require !== 'undefined') {\n",
+       "        require.undef(\"plotly\");\n",
+       "        requirejs.config({\n",
+       "            paths: {\n",
+       "                'plotly': ['https://cdn.plot.ly/plotly-latest.min']\n",
+       "            }\n",
+       "        });\n",
+       "        require(['plotly'], function(Plotly) {\n",
+       "            window._Plotly = Plotly;\n",
+       "        });\n",
+       "        }\n",
+       "        </script>\n",
+       "        "
       ]
      },
-     "execution_count": 113,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "torch.matmul(input[focus,], torch.t(output[context,]))"
+    "\n",
+    "# Représentation interactive \n",
+    "\n",
+    "import plotly\n",
+    "import plotly.graph_objs as go\n",
+    "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
+    "init_notebook_mode(connected=True)\n",
+    "\n",
+    "import cufflinks as cf\n",
+    "cf.go_offline()\n",
+    "cf.set_config_file(offline=False, world_readable=True)\n",
+    "\n",
+    "#Travailler avec sous-table sinon trop lourd\n",
+    "subFinalDf = pd.concat([finalDf[(finalDf['label'] != \"Autre\")],finalDf.iloc[1:100:]],  axis = 0)\n",
+    "\n",
+    "\n",
+    "subFinalDf.iplot(kind='scatter',\n",
+    "              mode='markers',\n",
+    "              x='Axe 1',\n",
+    "              y='Axe 2',\n",
+    "              categories='label',\n",
+    "              text='mot',\n",
+    "              xTitle='Axe 1',\n",
+    "              yTitle='Axe 2',\n",
+    "              title='ACP en 2 composantes',\n",
+    "              filename='cufflinks/simple-scatter')"
    ]
   },
   {
