mots peu fréquents enlevés

--- a/Code/0 - Formattage donnees.ipynb
+++ b/Code/0 - Formattage donnees.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -90,6 +90,84 @@
     "vocabulary = set(words)\n",
     "print(\"Nombre de mots :\", len(words))\n",
     "print(\"Taille du vocabulaire :\", len(vocabulary))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "import collections\n",
+    "from collections import Counter\n",
+    "fdist = nltk.FreqDist(words)\n",
+    "# On va enlever les mots qui apparaissent moins de 10 fois\n",
+    "mots_a_enlever = [w for w in vocabulary if fdist[w]<10]\n",
+    "mots_a_enlever_dict = Counter(mots_a_enlever)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus_trie = [' '.join([word for word in phrase.split() if word not in mots_a_enlever_dict]) for phrase in corpus]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# On ne garde que les tweets de 2 mots ou plus\n",
+    "corpus_trie = [phrase for phrase in corpus if len(phrase.split())>=2]\n",
+    "with open(\"data/corpus_trie.file\", \"wb\") as f:\n",
+    "    pickle.dump(corpus_trie, f, pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre de mots : 31390592\n",
+      "Taille du vocabulaire : 634181\n"
+     ]
+    }
+   ],
+   "source": [
+    "phrases = [phrase.split() for phrase in corpus_trie]\n",
+    "words = [item for sublist in phrases for item in sublist]\n",
+    "vocabulary = set(words)\n",
+    "print(\"Nombre de mots :\", len(words))\n",
+    "print(\"Taille du vocabulaire :\", len(vocabulary))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fdist[\"6h20\"]"
    ]
   }
  ],
