--- a/Code/1 - softmax.ipynb
+++ b/Code/1 - softmax.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "os.chdir('/Users/alainquartierlatente/Desktop/Ensae/StatApp')\n",
     "\n",
-    "with open(\"data/corpus.file\", \"rb\") as f:\n",
+    "with open(\"data/corpus_trie.file\", \"rb\") as f:\n",
     "    corpus = pickle.load(f) \n",
     "phrases = [phrase.split() for phrase in corpus]"
    ]
